[Mac][Material Design] Adjust cutoff for detecting a "dark" theme.

Chrome looks at the whiteComponent of a theme's custom toolbar color to
decide if the theme is "dark." The line between ligth and dark is an
empirical value - this cl adjusts the cutoff in hopes of getting closer
to the right value.

R=tapted@chromium.org
BUG=614806,617993

Review-Url: https://codereview.chromium.org/2068243002
Cr-Commit-Position: refs/heads/master@{#400168}