chrome/browser/ui/cocoa/chrome_browser_window.mm
@@ -10,6 +10,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import "chrome/browser/ui/cocoa/themed_window.h"
 #include "ui/base/theme_provider.h"
 
+namespace {
+
+// Upper and lower bounds for determining if a theme's colors indicate that
+// it's a "dark" theme. In Material Design, dark themes have controls that are
+// drawn using transparent white instead of a transparent shade of gray.
+const CGFloat kDarkThemeToolbarColorUpperBound = 0.55;
+const CGFloat kDarkThemeTabTextColorLowerBound = 0.7;
+
+}  // namespace
+
 @interface NSWindow (Private)
 - (BOOL)hasKeyAppearance;
 @end
@@ -66,7 +76,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
         [theColor colorUsingColorSpaceName:NSCalibratedWhiteColorSpace];
     if (theColor != nil) {
       // The white componement cutoff is an empirical value.
-      return [theColor whiteComponent] < 0.7;
+      return [theColor whiteComponent] < kDarkThemeToolbarColorUpperBound;
     }
   }
 
@@ -78,7 +88,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     theColor =
         [theColor colorUsingColorSpaceName:NSCalibratedWhiteColorSpace];
     if (theColor != nil) {
-      return [theColor whiteComponent] >= 0.7;
+      return [theColor whiteComponent] >= kDarkThemeTabTextColorLowerBound;
     }
   }
 
